--- a/index.html
+++ b/index.html
@@ -286,7 +286,21 @@
         </div>
       </div>
     </div> 
+<div class="box-container" style="width:33rem;margin-left:-0%;">
 
+    <div class="box tilt">
+      <img draggable="false" src="Ratkalwork.jpg" alt="" />
+      <div class="content">
+        <div class="tag">
+        <h3>RC. Ratkal</h3>
+        </div>
+        <div class="desc">
+          <p>RC. Ratkal Traders Front-End website.</p>
+          <div class="btns">
+            <a href="https://samarth302005.github.io/RC.Ratkal/" class="btn" target="_blank"><i class="fas fa-eye"></i> View</a>        
+          
+          
+        </div>
 </div>
 
 </section>
