--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
   position: relative;
   overflow: hidden;
   height: 30rem;
+  width:33rem;
 }
 .work .box-container .box img {
   height: 100%;
