--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ background-color: #45a049;
           <p> <i class="fas fa-map-marked-alt"></i>omerga-413606, Maharashtra</p>
           <div class="share">
 
-<a href="https://www.linkedin.com/in/samarth-heble-9a67342bautm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
+<a href="https://www.linkedin.com/in/samarth-heble-9a67342ba?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
     <a href="mailto:Sam31heble@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
    <a href="https://twitter.com/jigar_sable" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
               <a href="https://www.instagram.com/mr.samarth_h30" class="fab fa-instagram" aria-label="Instagram" target="_blank"></a>
