--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ background-color: #45a049;
   <h1 class="credit"> <!-- scroll top btn -->
 <a href="#home" aria-label="ScrollTop" class="fas fa-long-arrow-alt-up" id="scroll-top"></a>
 <!-- scroll back to top --> &nbsp;&nbsp;&nbsp;
-Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/samarth-heble-9a67342bautm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> Samarth Heble</a></h1>
+Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/samarth-heble-9a67342ba?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> Samarth Heble</a></h1>
 
 </section>
 <!-- footer section ends -->
